--- a/Backend/verification-service/package.json
+++ b/Backend/verification-service/package.json
@@ -9,23 +9,25 @@
     "test": "mocha -r ts-node/register tests/**/*.test.ts --exit"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "better-sqlite3": "^8.0.1",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "axios": "^1.4.0"
+    "express": "*",
+    "better-sqlite3": "*",
+    "body-parser": "*",
+    "cors": "*",
+    "axios": "*"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/better-sqlite3": "^7.6.4",
-    "@types/cors": "^2.8.13",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.0.0",
-    "ts-node-dev": "^2.0.0",
-    "mocha": "^10.0.0",
-    "chai": "^4.3.7",
-    "@types/chai": "^4.3.5",
-    "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.12"
+    "@types/express": "*",
+    "@types/better-sqlite3": "*",
+    "@types/cors": "*",
+    "@types/node": "*",
+    "@types/mocha": "*",
+    "typescript": "*",
+    "ts-node": "*",
+    "ts-node-dev": "*",
+    "mocha": "*",
+    "chai": "*",
+    "@types/chai": "*",
+    "supertest": "*",
+    "@types/supertest": "*"
   }
 }
